--- a/public/index.html
+++ b/public/index.html
@@ -369,16 +369,18 @@ input {
 
 <div class="summary-holder">
 
+<blockquote class="blockquote text-center">
+  <p class="mb-0">Summary</p>
+</blockquote>
+
   <table class="table summary-holder-show-cart table-striped"></table>
 
 <hr>
   <div class="">Total Price: $<span class="summary-holder-total-cart"></span></div>
-<hr>
+
 <br>
 
   <table class="table summary-holder-user-details table-striped"></table>
-
-<br>
 
   <table class="table summary-holder-show-address table-striped"></table>
 
