--- a/public/index.html
+++ b/public/index.html
@@ -2305,6 +2305,7 @@ var user_full_name = "";
 var createCustomer = false;
 var payasguest = true;
 var userloggedin = false;
+var netlify_access_token = "";
 
 
 function loginNetlifyIdentity(user) {
@@ -2313,9 +2314,8 @@ function loginNetlifyIdentity(user) {
 
   netlifyIdentity.refresh().then((jwt)=>console.log(jwt));
 
-  const vv = netlifyIdentity.currentUser();
-
-  var userEmail = vv.email;
+  //const vv = netlifyIdentity.currentUser();
+  //var userEmail = vv.email;
   
   console.log(user);
 
@@ -2323,11 +2323,13 @@ function loginNetlifyIdentity(user) {
   user_email = user.email;
   user_full_name = user.user_metadata.full_name;
   payasguest = false;
+  netlify_access_token = user.token.access_token;
+  
 
-  console.log( "user_id: user_email : user_full_name ", user_id , user_email , user_full_name);
+  console.log( "user_id: user_email : user_full_name : netlify_access_token ", user_id , user_email , user_full_name, netlify_access_token);
 
   // Check Netlify ID on Faunna DB
-  var qc = {"query" : user_id};
+  var qc = { "query" : user_id, "netlify_access_token" : netlify_access_token };
 
   console.log( "getFaunaID started" );
 
@@ -2611,6 +2613,7 @@ function logoutNetlifyIdentity(user) {
   user_email = "";
   user_stripe_id = "";
   user_full_name = "";
+  netlify_access_token = "";
 
   // Unbind from events
   netlifyIdentity.off('login'); // to unbind all registered handlers
@@ -2706,172 +2709,10 @@ catch(err) {
 
 ////// Stripe Query
 
-// https://api.stripe.com/v1/search?query=vinayak.patel@grynn.in&prefix=false
-/*
-
-fetch("https://sleepy-goodall-2e1697.netlify.app/.netlify/functions/queryStripe", {
-
-  method: "POST",
-
-  headers: {
-    "Content-Type": "application/json"
-  },
-
-  body: JSON.stringify("")
-
-})
-  .then(function(result) {
-    return result.json();
-  })
-  .then(function(data) {
-
-    console.log("Query: ", data);   
-
-  }
-);
-
-*/
-
-
-
-
-
 
 
 try {
 
-
-
-///// Fauna DB /////
-
-
-//q = faunadb.query;
-
-
-//var serverClient = new faunadb.Client({ secret: '' });
-
-
-/*
-
-
-serverClient.query(
-  faunadb.query.Create(
-    faunadb.query.Collection('grynntable'),
-    { data: { title: 'What I had for breakfast ..' } },
-  )
-)
-.then((ret) => console.log(ret))
-
-
-
-serverClient.query(
-  q.Get(
-    q.Match(q.Index('posts_by_title'), 'What I had for breakfast ..')
-  )
-)
-.then((ret) => console.log(ret))
-
-
-
-serverClient.query(
-  q.Update(
-    q.Ref(q.Collection('grynntable'), '273181600287556102'),
-    { data: { title: 'Vinayak is the best programmer...' } },
-  )
-)
-.then((ret) => console.log(ret))
-
-
-
-serverClient.query(
-  q.Get(q.Ref(q.Collection('grynntable'), '273181600287556102'))
-)
-.then((ret) => console.log(ret))
-
-
-
-serverClient.query(
-  q.CreateIndex({
-    name: 'posts_by_title',
-    source: q.Collection('grynntable'),
-    terms: [{ field: ['data', 'title'] }],
-  })
-)
-.then((ret) => console.log(ret))
-
-
-
-serverClient.query(
-  q.Create(
-    q.Collection('grynntable'),
-    { data: { title: 'What I had for breakfast ..' } },
-  )
-)
-.then((ret) => console.log(ret))
-
-
-
-serverClient.query(
-  q.Create(
-    q.Collection('grynntable'),
-    { data: { title : '123456789' ,  key_value: 'some value is 123456789'} },
-  )
-)
-.then((ret) => console.log(ret))
-
-
-
-serverClient.query(
-  q.Get(
-    q.Match(q.Index('posts_by_title'), '123456789')
-  )
-)
-.then((ret) => console.log(ret))
-
-
-
-
-serverClient.query(
-  q.Create(
-    q.Collection('grynntable'),
-    { data: { title : 'netlify_ID deepak grynn' ,  key_value: 'stripe_ID deepak strip 12356790'} },
-  )
-)
-.then((ret) => console.log(ret))
-
-
-
-
-
-serverClient.query(
-  q.Get(
-    q.Match(q.Index('posts_by_title'), 'vinayak')
-  )
-)
-.then((ret) => console.log(ret))
-
-
-
-
-serverClient.query(
-  q.Create(
-    q.Collection('grynntable'),
-    { data: { title : '123456789' ,  key_value: 'some value is 123456789'} },
-  )
-)
-.then((ret) => console.log(ret))
-
-
-serverClient.query(
-  q.Get(
-    q.Match(q.Index('posts_by_title'), '123456789')
-  )
-)
-.then((ret) => console.log(ret))
-
-
-
-*/
 
 
 
