--- a/public/index.html
+++ b/public/index.html
@@ -2348,6 +2348,7 @@ function retrieveCustomer ( customerID ) {
     method: "POST",
 
     headers: {
+      "Authorization": bearer,
       "Content-Type": "application/json"
     },
 
