--- a/public/index.html
+++ b/public/index.html
@@ -2440,13 +2440,13 @@ function updateCustomerStripe ( ) {
 
       console.log("typeof: ", typeof(data));
 
-      user_stripe_id = data.Customer.id;
+      //user_stripe_id = data.Customer.id;
 
-      var dat = { title : user_id ,  key_value: user_stripe_id, "netlify_access_token" : netlify_access_token } ;
+      //var dat = { title : user_id ,  key_value: user_stripe_id, "netlify_access_token" : netlify_access_token } ;
 
-      console.log('Creating FaunaID: ', dat);
+      //console.log('Creating FaunaID: ', dat);
 
-      createFaunaID(dat);
+      //createFaunaID(dat);
 
     
     }).catch((error) => {
