--- a/public/index.html
+++ b/public/index.html
@@ -2404,7 +2404,7 @@ function updateCustomerStripe ( ) {
 
   const vv = netlifyIdentity.currentUser();
   
-  if (vv.id === 'undefined' || vv.id === "" || vv.id === undefined || vv.id === null){
+  if (vv === 'undefined' || vv === undefined || vv === null){
     data.push({ "customerID" : user_stripe_id, "user_id" : "" , "netlify_access_token" : netlify_access_token });
   }
   else{
